crates/oxc_css_parser/tests/error/scss/at-rule/forward/hide-and-show.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ hide-and-show.scss:1:21
  │
1 │ @forward "a" hide b show c;
  │                     ^^^^


